# rust-web-backend-boilerplate

./: Cargo.toml  README.md  Rocket.toml
migrations/2021-10-09-034512_create_todos/: up.sql
src/: context.rs  db.rs  error.rs  main.rs  schema.rs
src/todo/: controller.rs  mod.rs  model.rs  service.rs
