[package]
name = "todo-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
uuid = { version = "=0.8.1", features = ["serde", "v4"] }
r2d2 = "0.8.9"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
